# wiggly-log

./: .gitignore  ChangeLog  Doxyfile.in  INSTALL  Makefile.am  Makefile.in  README  TODO  appender.cpp  appender_factory.cpp  config.h.in  configure  configure.ac  console_appender.cpp  detail.hpp  file_appender.cpp  layout.cpp  log.cpp  log_exc.cpp  log_format.cpp  log_format_simple.cpp  log_format_xml.cpp  log_level.cpp  logger.cpp  properties.cpp  simple_layout.cpp  test.cpp
example/: Makefile.am  Makefile.in  basic_iteration.cpp  basic_stream_iteration.cpp  level_iteration.cpp  log4j.conf  simple_format_iteration  simple_format_stream_iteration  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
m4/: acx_pthread.m4
wiggly/: log.hpp  log_exc.hpp  log_format.hpp  log_format_simple.hpp  log_format_xml.hpp  log_level.hpp  log_macro.hpp  logger.hpp
wiggly/log/: appender.hpp  appender_factory.hpp  console_appender.hpp  event.hpp  file_appender.hpp  layout.hpp  properties.hpp  simple_layout.hpp  test.hpp
