
EXTRA_DIST = log4j.conf

noinst_PROGRAMS = test1 test2 test3 test4 test5 test6 \
basic_iteration basic_stream_iteration \
level_iteration

test1_SOURCES = test1.cpp
test1_LDADD = ../libwlog.la

test2_SOURCES = test2.cpp
test2_LDADD = ../libwlog.la

test3_SOURCES = test3.cpp
test3_LDADD = ../libwlog.la

test4_SOURCES = test4.cpp
test4_LDADD = ../libwlog.la

test5_SOURCES = test5.cpp
test5_LDADD = ../libwlog.la

test6_SOURCES = test6.cpp
test6_LDADD = ../libwlog.la

basic_iteration_SOURCES = basic_iteration.cpp
basic_iteration_LDADD = ../libwlog.la

basic_stream_iteration_SOURCES = basic_stream_iteration.cpp
basic_stream_iteration_LDADD = ../libwlog.la

level_iteration_SOURCES = level_iteration.cpp
level_iteration_LDADD = ../libwlog.la
